# SpaceMiningSim

./: .clang-format  .gitignore  CMakeLists.txt  Doxygenfile  README.md  build.sh  run.sh
Output/: station_stat.txt  truck_stat.txt
docs/html/: _lunar_mining_sim_8cpp.html  _mining_site_8cpp.html  _mining_site_8h.html  _mining_site_8h_source.html  _mining_truck_8cpp.html  _mining_truck_8h.html  _mining_truck_8h_source.html  _simulator_8cpp.html  _simulator_8h.html  _simulator_8h_source.html  _unload_station_8cpp.html  _unload_station_8h.html  _unload_station_8h_source.html  annotated.html  class_mining_site-members.html  class_mining_site.html  class_mining_truck-members.html  class_mining_truck.html  class_simulator-members.html  class_simulator.html  class_unload_station-members.html  class_unload_station.html  classes.html  dir_3caca9724464a36eb0330ae33f9b1375.html  dir_4a6686df91811a5ddcd8aaae8bb9033d.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_c1dc6b2b08a70392eb716f94e690ed4d.html  dir_fbcb7afe1d56c2858d9d260fcc51b8ce.html  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  menudata.js
docs/xml/: Doxyfile.xml  _lunar_mining_sim_8cpp.xml  _mining_site_8cpp.xml  _mining_site_8h.xml  _mining_truck_8cpp.xml  _mining_truck_8h.xml  _simulator_8cpp.xml  _simulator_8h.xml  _unload_station_8cpp.xml  _unload_station_8h.xml  class_mining_site.xml  class_mining_truck.xml  class_simulator.xml  class_unload_station.xml  index.xml  (+5 more)
source/: LunarMiningSim.cpp
(+41 files in other folders)
